feat: add user registration
